<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ligthblue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pathname.example.simpletodolist.EditItemActivity" >

    <EditText
        android:id="@+id/etEditTodoItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:hint="@string/editItem"
        android:text="@string/editTodoItem" />

    <EditText
        android:id="@+id/etPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_alignLeft="@+id/etDuedate"
        android:layout_below="@+id/etDuedate"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/priority"
        android:inputType="number" />

    <EditText
        android:id="@+id/etDuedate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_alignLeft="@+id/etEditTodoItem"
        android:layout_below="@+id/etEditTodoItem"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/duedate"
        android:inputType="date" />

    <Button
        android:id="@+id/btnEditItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPriority"
        android:layout_marginTop="14dp"
        android:layout_toRightOf="@+id/etPriority"
        android:onClick="onSubmit"
        android:text="@string/btnEditTodoItem"
        android:textSize="14sp" />

</RelativeLayout>
