<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <ListView
        android:id="@+id/lvItems"
        android:layout_width="match_parent"
        android:layout_height= "320dp"
        android:layout_centerHorizontal="true" 
        android:layout_alignParentTop="true">

    </ListView>

    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/etNewItem"
        android:onClick="addTodoItem"
        android:text="@string/addItem" />

    <EditText
        android:id="@+id/etNewItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lvItems"
        android:ems="10"
        android:hint="@string/todoItem" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etNewDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnAddItem"
        android:ems="10"
        android:hint="@string/newDueDate"
        android:inputType="date" />

</RelativeLayout>
